sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:22: error: reassignment to val
      i = getNombreValeurs()-2-compteur - j
        ^