sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort()
{
  var sortie:Boolean = false
  var compteur:Int = 0
  
  while(!sortie)
  {
    sortie = true
    
    for(i <- 0 to getNombreValeurs()-2-compteur)
    {
      if(plusPetit(i+1,i))
      {
        echange(i,i+1)
        sortie = false
      }
    }
    
    for(i <- 0 to getNombreValeurs()-2-compteur)
    {
      i = getNombreValeurs()-2-compteur - j
      
      if(plusPetit(i+1,i))
      {
        echange(i,i+1)
        sortie = false
      }
    }
    
    compteur = compteur + 1    
  }
}